build: Replace jsonlint with eslint
Bug: T220036
Change-Id: I23c629ec59069e7940b0e9309535b119cde2207b

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 node_modules/
 vendor/
 composer.lock
+.eslintcache
 
 # Editors
 *.kate-swp
@@ -15,9 +16,11 @@ composer.lock
 cscope.files
 cscope.out
 *.orig
+
 ## NetBeans
 nbproject*
 project.index
+
 ## Sublime
 sublime-*
 sftp-config.json
